# relab_controlcenter

./: .gitignore  PERFORMANCE_CONTRACT.md  README.md  add_new_translations.py  build_log.txt  build_log_cmd.txt  build_log_install.txt  device_cameras_online.json  final_audit.py  fix_context.py  fix_gpu.py  gradle.properties  gradlew.bat  migrate_hardcoded.py  mock_translations.py  scan_hardcoded.py  settings.gradle.kts  stability_config.conf  translate_all.py  translate_strings.py  translate_strings_fast.py  window_dump.xml
app/: build.gradle.kts  lint-baseline.xml  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  benchmark_native.c
gradle/: libs.versions.toml
scratch/: list_settings_functions.py  list_viewmodel_structure.py  search.py  search_autosizetext.py  search_battery_calculations.py  search_benchmarks.py  search_foreground.py  search_fpsvalue.py  search_framecallback.py  search_lazy.py  search_registerreceiver.py  search_res_strings.py  search_screen_battery.py  search_screen_collect.py  search_screen_state.py  search_setappinforeground.py  search_settings.py  search_socutils_usage.py  search_ui_init.py  search_vi_strings.py  search_vi_strings_utf8.py  search_viewmodel_calls.py  search_vm_battery_calc.py  search_voltage.py  view_autosizetext_usage.py  view_battery_display_realtime.py  view_battery_tab.py  view_battery_tracking.py  view_charging_speed_card.py  view_common_components.py  view_common_components_utf8.py  view_core_freq.py  view_cpu_load.py  view_dashboard_lazy.py  view_fps_usage.py  view_framecallback.py  view_getbatterycurrentma.py  (+11 more)
(+235 files in other folders)
